--- a/subassets/css/publication_box.css
+++ b/subassets/css/publication_box.css
@@ -6,7 +6,7 @@ layout: null
  * @Author: Conghao Wong
  * @Date: 2023-10-12 18:43:02
  * @LastEditors: Conghao Wong
- * @LastEditTime: 2023-10-12 19:53:39
+ * @LastEditTime: 2023-10-13 08:58:59
  * @Description: file content
  * @Github: https://cocoon2wong.github.io
  * Copyright 2023 Conghao Wong, All Rights Reserved.
@@ -57,6 +57,6 @@ layout: null
 .publication_picture {
     margin-left: auto;
     margin-right: 15px;
-    width: 180px;
+    width: 30%;
     flex: none;
 }
